<resources>
    <string name="app_name">MySudoku</string>
    <string name="enter_level">输入关卡</string>
    <string name="ok">确定</string>
    <string name="restart">重新开始</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="nine">9</string>
    <string name="delete">D</string>
    <string name="author">作者：魏巍</string>
    <string name="cannot_find_version_name">未知版本</string>
    <string name="select_level">选择关卡</string>
    <string name="clear_data">清除数据</string>
    <string name="clear_level">清除当前关卡</string>
    <string name="clear_all">清除所有</string>
    <string name="start_game">开始游戏</string>
    <string name="exit_game">退出游戏</string>
    <string name="about">关于我</string>
    <string name="rank_list">排行榜</string>
    <string name="no_data">无数据</string>
    <string name="level_no_data">第%d关：无数据</string>
    <string name="enter_your_name">请输入你的名字</string>
    <string name="enter_name">输入姓名</string>
    <string name="exit">退出</string>
    <string name="nick_name">昵称: %s</string>
    <string name="welcome">欢迎来到Sudoku</string>
    <string name="help">数独（すうどく，Sūdoku），是源自18世纪瑞士发明，流传到美国，再由日本发扬光大的一种数学游戏。是一种运用纸、笔进行演算的逻辑游戏。玩家需要根据9×9盘面上的已知数字，推理出所有剩余空格的数字，并满足每一行、每一列、每一个粗线宫内的数字均含1~9，不重复。</string>
    <string name="loading">载入中……</string>
</resources>
