<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:columnCount="5"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/actions_layout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn_1"
            style="@style/NumberButtonDefaultStyle"
            android:text="@string/one" />

        <Button
            android:id="@+id/btn_2"
            style="@style/NumberButtonDefaultStyle"
            android:text="@string/two" />

        <Button
            android:id="@+id/btn_3"
            style="@style/NumberButtonDefaultStyle"
            android:text="@string/three" />

        <Button
            android:id="@+id/btn_4"
            style="@style/NumberButtonDefaultStyle"
            android:text="@string/four" />

        <Button
            android:id="@+id/btn_5"
            style="@style/NumberButtonDefaultStyle"
            android:text="@string/five" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/actions_layout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn_6"
            style="@style/NumberButtonDefaultStyle"
            android:text="@string/six" />

        <Button
            android:id="@+id/btn_7"
            style="@style/NumberButtonDefaultStyle"
            android:text="@string/seven" />

        <Button
            android:id="@+id/btn_8"
            style="@style/NumberButtonDefaultStyle"
            android:text="@string/eight" />

        <Button
            android:id="@+id/btn_9"
            style="@style/NumberButtonDefaultStyle"
            android:text="@string/nine" />

        <Button
            android:id="@+id/btn_D"
            style="@style/NumberButtonDefaultStyle"
            android:text="@string/delete" />
    </LinearLayout>


</LinearLayout>